<resources>
    <string name="app_name">Roomie</string>
    <string name="Login">Accedi</string>
    <string name="Register_underlined">Non hai un account? <u>Registrati</u></string>
    <string name="UserName">Nome Utente</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="CreateAccount">Crea Account</string>
    <string name="GoogleAccess">Accedi con Google</string>
    <string name="profilePicture">Foto profilo utente</string>
    <string name="groupPicture">Foto profilo gruppo</string>
    <string name="arrowBack">Freccia indietro</string>
    <string name="userData">Dati utente</string>
    <string name="my_groups">I miei gruppi</string>
    <string name="activityMemory">Registro attività</string>
    <string name="navigationDrawer">Menu gruppi</string>
    <string name="category">Categoria</string>
    <string name="group">Gruppo</string>
    <string name="board">Bacheca</string>
    <string name="purchase">Spesa</string>
    <string name="summary">Rapporto</string>
    <string name="newGroup">Crea nuovo gruppo</string>
    <string name="seeRequests">Visualizza richieste</string>
    <string name="groupName">Nome gruppo</string>
    <string name="createGroup">Crea gruppo</string>
    <string name="searchGroup">Ricerca gruppo</string>
    <string name="searchUser">Ricerca utente</string>
    <string name="newPurchase">Nuova spesa</string>
    <string name="categories">Elenco categorie</string>
    <string name="newCategory">Nuova categoria</string>
    <string name="createCategory">Crea categoria</string>
    <string name="selectCategory">Seleziona categoria</string>
    <string name="disconnect">Disconnetti</string>
    <string name="commitmentName">Nome impegno</string>
    <string name="commitmentDate">Data Impegno</string>
    <string name="commitmentStart">Ora inizio</string>
    <string name="commitmentEnd">Ora fine</string>
    <string name="commitmentDescription">Descrizione impegno</string>
    <string name="commitmentCreate">Crea impegno</string>
    <string name="commitmentDelete">Elimina impegno</string>
    <string name="insertEmail">Inserisci email</string>
    <string name="sendRequest">Invia richiesta</string>
    <string name="newPassword">Inserisci la tua email, ti invieremo una email per resettarla</string>
    <string name="forgotPassword_underlined"><u>Password dimenticata?</u></string>
    <string name="sendEmail">Invia email</string>
    <string name="purchaseName">Nome spesa</string>
    <string name="purchaseCost">Costo spesa</string>
    <string name="purchasedFrom">Pagato da</string>
    <string name="dividedFrom">Diviso tra</string>
    <string name="purchaseDate">Data Spesa</string>
    <string name="purchaseSplit">Tipo divisione spesa</string>
    <string name="equalSplit">Parti uguali</string>
    <string name="customSplit">Sfalzato</string>
    <string name="purchaseConfirm">Inserisci spesa</string>
    <string name="inviteMember">Invita un nuovo membro</string>
    <string name="inviteMemberDescription">Inserisci l\'indirizzo email della persona da invitare</string>
    <string name="total">Totale</string>
    <string name="exits">Uscite</string>
    <string name="entrances">Entrate</string>
    <string name="default_web_client_id">387761315952-k28pvhkvpt5p7fn3j1tv1v2es8k8g804.apps.googleusercontent.com</string>
</resources>