<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet"
    android:padding="24dp">

                <!-- Titolo -->
                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inviteMember"
                    style="@style/TitleBoxStyle"
                    android:textStyle="bold"
                    android:paddingBottom="5dp" />

                <!-- Sottotitolo -->
                <TextView
                    android:id="@+id/subtitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inviteMemberDescription"
                    style="@style/BodyStyle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/groupSearch"
        style="@style/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchUser">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:drawableStart="@drawable/search"
            android:drawableTint="@color/onSurfaceColor"
            android:drawablePadding="15dp"
            android:padding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- bottone invia richiesta -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendRequest"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
</LinearLayout>
