<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Roomie">
    <!--tools:context=".activity.LoginActivity">-->

    <!-- logo -->
    <ImageView
        android:id="@+id/starting_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/logo" />


    <!-- email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/TextInputStyle"
        android:hint="@string/Email"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_logo">

        <!-- testo dentro email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="5dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/Password" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        style="@style/TextInputStyle"
        android:hint="@string/Password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email">

        <!-- testo password -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/locker"
            android:drawablePadding="5dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@id/LoginButton" />
    </com.google.android.material.textfield.TextInputLayout>


<!--    bottone ppw dimenticata-->
    <TextView
        android:id="@+id/forgotPassword"
        style="@style/BodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgotPassword_underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"/>


    <!-- bottone invio -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/LoginButton"
        style="@style/Button"
        android:layout_marginTop="15dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"/>


    <!-- bottone registrati -->
    <TextView
        android:id="@+id/Registrati"
        style="@style/BodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Register_underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Google"
        style="@style/Button"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/primaryContainerColor"
        android:text="@string/GoogleAccess"
        app:icon="@drawable/google_logo"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registrati" />
</androidx.constraintlayout.widget.ConstraintLayout>