<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Roomie">


    <!-- menu in alto -->
    <include
        layout="@layout/top_bar"
        android:id="@+id/top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!-- nome impegno -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commitmentName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/commitmentName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- testo dentro impegno -->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textCategoryName"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- categoria impegno -->
    <Button
        android:id="@+id/pickCategory"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/selectCategory"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/commitmentName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- data impegno -->
    <Button
        android:id="@+id/dateCommitment"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/commitmentDate"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/pickCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- ora inizio -->
    <Button
        android:id="@+id/startCommitment"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/commitmentStart"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/dateCommitment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- ora fine -->
    <Button
        android:id="@+id/endCommitment"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/commitmentEnd"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/dateCommitment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


        <!-- descrizione -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionCommitment"
            android:layout_width="280dp"
            android:layout_height="230dp"
            android:hint="@string/commitmentDescription"
            android:layout_marginTop="15dp"
            style="@style/TextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/endCommitment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <!-- testo dentro impegno -->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="username"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:textSize="18sp"/>
</com.google.android.material.textfield.TextInputLayout>


    <!-- crea impegno -->
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        style="@style/Button"
        android:text="@string/commitmentCreate"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionCommitment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>