<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Roomie">
    <!--tools:context=".activity.LoginActivity">-->

    <ImageButton
        style="@style/ArrowBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- logo -->
    <ImageView
        android:id="@+id/starting_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/newPassword"
        style="@style/TitleBoxStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starting_logo"/>


    <!-- email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/TextInputStyle"
        android:hint="@string/Email"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword">

        <!-- testo dentro email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="5dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/Password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- bottone invio -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendEmail"
        style="@style/Button"
        android:text="@string/sendEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email"
        android:layout_marginTop="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>