<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- nome gruppo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/groupName"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:hint="@string/groupName"
        android:layout_marginTop="15dp"
        style="@style/TextInputStyle"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- testo dentro nome utente -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="username"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- immagine profilo -->
    <ImageView
        android:id="@+id/groupPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/groupPicture"
        android:background="@drawable/circle_background"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/groupName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_photo"
        android:layout_marginTop="40dp"/>


    <!-- bottone invio -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createGroup"
        android:layout_width="170dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:text="@string/createGroup"
        app:layout_constraintTop_toBottomOf="@+id/groupPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>